Other option of 科学上网.

--- a/basic_linux/科学上网.md
+++ b/basic_linux/科学上网.md
@@ -7,6 +7,7 @@
     - VPN: 价格较高，速度不稳定
     - [蓝灯](https://getlantern.org/zh_CN/index.html): 有免费版和收费版，免费版速度慢
     - shadowsocks: 今天介绍的方式
+    - [其他方式](https://www.bennythink.com/all-platform-scientific-internet-all-in-one.html)
     > **所有免费方式均存在不稳定或速度慢的缺点**
 
 - shadowsocks原理
